<resources>
    <string name="app_name">DetikApp</string>
    <string name="contdesc">contdesc</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="foto_ari_gunawan">Foto: Ari Gunawan</string>
    <string name="detiknews">detiknews</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="yudistira_saputra_detiknews">Yudistira Saputra - detikNews</string>
    <string name="sabtu_23_mei_2020_17_30_wib">Sabtu, 23 Mei 2020 17:30 WIB</string>
    <string name="baca_juga_judul_berita_terkait">Baca Juga : Judul Berita Terkait</string>
</resources>